--- a/src/main/java/views/products/ProductSearchView.form
+++ b/src/main/java/views/products/ProductSearchView.form
@@ -147,11 +147,14 @@
               </component>
             </children>
           </grid>
-          <hspacer id="ff46c">
+          <component id="65a84" class="javax.swing.JButton" binding="modifyProductButton">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-          </hspacer>
+            <properties>
+              <text value="Modificar Producto"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <grid id="2f9a1" binding="modularContainer" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
