--- a/src/main/java/views/products/modular/ModularClothView.form
+++ b/src/main/java/views/products/modular/ModularClothView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="containerPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="15" bottom="0" right="15"/>
     <constraints>
-      <xy x="20" y="20" width="610" height="400"/>
+      <xy x="20" y="20" width="656" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -50,7 +50,7 @@
               </component>
             </children>
           </grid>
-          <grid id="b1e54" binding="profitContainer" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="b1e54" binding="profitContainer" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -65,6 +65,14 @@
                   </grid>
                 </constraints>
                 <properties/>
+              </component>
+              <component id="e5383" class="javax.swing.JLabel" binding="profitLabel">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="%"/>
+                </properties>
               </component>
             </children>
           </grid>
