--- a/src/main/java/views/products/modular/ModularFlagView.form
+++ b/src/main/java/views/products/modular/ModularFlagView.form
@@ -48,7 +48,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
-                <border type="none" title="Ancho: "/>
+                <border type="none" title="Metros de tela:"/>
                 <children>
                   <component id="cac8f" class="javax.swing.JTextField" binding="widthTextField">
                     <constraints>
@@ -74,7 +74,7 @@
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
-                <border type="none" title="Costo del m2: "/>
+                <border type="none" title="Costo del metro lineal "/>
                 <children>
                   <component id="f5400" class="javax.swing.JTextField" binding="metersPriceTextField">
                     <constraints>
@@ -304,7 +304,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="ee74" binding="profitContainer" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="ee74" binding="profitContainer" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -319,6 +319,14 @@
                   </grid>
                 </constraints>
                 <properties/>
+              </component>
+              <component id="85a86" class="javax.swing.JLabel" binding="profitLabel">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="%"/>
+                </properties>
               </component>
             </children>
           </grid>
