--- a/src/main/java/views/products/modular/ModularSquareMeterPrintingView.form
+++ b/src/main/java/views/products/modular/ModularSquareMeterPrintingView.form
@@ -141,7 +141,7 @@
               </component>
             </children>
           </grid>
-          <grid id="6661d" binding="profitContainer" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="6661d" binding="profitContainer" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -156,6 +156,14 @@
                   </grid>
                 </constraints>
                 <properties/>
+              </component>
+              <component id="8692" class="javax.swing.JLabel" binding="profitLabel">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="%"/>
+                </properties>
               </component>
             </children>
           </grid>
